# vktiny

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  sample.cpp  vcpkg.json  vkbase.hpp  vkframework.hpp  vkgltf.hpp  vkray.hpp
examples/asset/: sponza.gltf
examples/gltf_loading/: main.cpp
examples/hello_triangle/: App.cpp  App.hpp  BaseApp.cpp  BaseApp.hpp  main.cpp
examples/minimal/: main.cpp
examples/raytracing_triangle/: main.cpp
examples/shader/camera/: raygen.rgen
examples/shader/camera/spv/: raygen.rgen.spv
examples/shader/gltf_loading/: closesthit.rchit  raygen.rgen
examples/shader/gltf_loading/spv/: raygen.rgen.spv
examples/shader/hello_compute/: compute.comp
examples/shader/hello_compute/spv/: compute.comp.spv
examples/shader/pathtracing/: closesthit.rchit  globals.glsl  miss.rmiss  random.glsl  raygen.rgen  shadow.rmiss
examples/shader/pathtracing/spv/: closesthit.rchit.spv  miss.rmiss.spv  raygen.rgen.spv  shadow.rmiss.spv
examples/shader/raytracing_triangle/: miss.rmiss  raygen.rgen
examples/shader/raytracing_triangle/spv/: raygen.rgen.spv
examples/shader/sponza/: closesthit.rchit  raygen.rgen
examples/src/camera/: main.cpp
examples/src/gltf_loading/: main.cpp
examples/src/hello_compute/: main.cpp
examples/src/pathtracing/: main.cpp
examples/src/raytracing_triangle/: main.cpp
examples/src/sponza/: main.cpp
include/: AccelStruct.hpp  Buffer.hpp  Context.hpp  DebugMessenger.hpp  DescriptorManager.hpp  Device.hpp  Image.hpp  Instance.hpp  Mesh.hpp  PhysicalDevice.hpp  Pipeline.hpp  ResourceManager.hpp  ShaderManager.hpp  Surface.hpp  Swapchain.hpp
include/vktiny/: AccelStruct.hpp  Buffer.hpp  CommandBuffer.hpp  Context.hpp  DebugMessenger.hpp  DescriptorManager.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Image.hpp  Input.hpp  Instance.hpp  Log.hpp  Mesh.hpp  PhysicalDevice.hpp  Pipeline.hpp  ShaderManager.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.hpp  Window.hpp  math.hpp  vktiny.hpp
include/vktiny/Scene/: Camera.hpp  Material.hpp  Mesh.hpp  Model.hpp  Scene.hpp
include/vktiny/Vulkan/: AccelStruct.hpp  Buffer.hpp  Context.hpp  DebugMessenger.hpp  DescriptorManager.hpp  Device.hpp  Image.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  ShaderManager.hpp  Surface.hpp  Swapchain.hpp
samples/: 00_hello_triangle.cpp  01_gltf_loading.cpp  hello_triangle.cpp  hello_world.cpp
samples/00_hello_triangle/: 00_hello_triangle.cpp  closesthit.rchit.spv  main.cpp
samples/01_gltf_loading/: 01_gltf_loading.cpp
samples/01_gltf_mesh/: 01_gltf_mesh.cpp  closesthit.rchit.spv  raygen.rgen
samples/01_gltf_mesh_texture/: 01_gltf_mesh_texture.cpp
samples/02_gltf_texture/: 02_gltf_texture.cpp
samples/02_mouse_input_and_camera/: 02_mouse_input_and_camera.cpp  closesthit.rchit.spv  raygen.rgen  raygen.rgen.spv
samples/02_texture_loading/: 02_texture_loading.cpp  closesthit.rchit  closesthit.rchit.spv  raygen.rgen.spv
samples/03_gltf_scene/: 03_gltf_scene.cpp  closesthit.rchit  closesthit.rchit.spv  raygen.rgen  raygen.rgen.spv
samples/03_ubo_camera/: 03_ubo_camera.cpp  closesthit.rchit.spv  raygen.rgen
samples/04_mouse_input/: 04_mouse_input.cpp  closesthit.rchit  miss.rmiss.spv
samples/04_tlas_rebuilding/: 04_tlas_rebuilding.cpp  closesthit.rchit  raygen.rgen.spv
samples/05_gltf_scene/: 05_gltf_scene.cpp  closesthit.rchit  closesthit.rchit.spv  raygen.rgen  raygen.rgen.spv
samples/06_tlas_rebuilding/: 06_tlas_rebuilding.cpp  closesthit.rchit.spv
samples/shaders/: raygen.rgen  raygen.rgen.spv
samples/shaders/01_gltf_loading/: closesthit.rchit  closesthit.rchit.spv  raygen.rgen  raygen.rgen.spv
shader/: closesthit.rchit  miss.rmiss  raygen.rgen
shader/spv/: closesthit.rchit.spv  miss.rmiss.spv  raygen.rgen.spv
src/: AccelStruct.cpp  Buffer.cpp  CommandBuffer.cpp  Context.cpp  DebugMessenger.cpp  DescriptorManager.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  Image.cpp  Input.cpp  Instance.cpp  Mesh.cpp  PhysicalDevice.cpp  Pipeline.cpp  ResourceManager.cpp  ShaderManager.cpp  ShaderModule.cpp  Surface.cpp  Swapchain.cpp  math.cpp
src/Scene/: Camera.cpp  Mesh.cpp  Scene.cpp
src/Vulkan/: AccelStruct.cpp  Buffer.cpp  Context.cpp  DebugMessenger.cpp  DescriptorManager.cpp  Device.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  Pipeline.cpp  ShaderManager.cpp  Surface.cpp  Swapchain.cpp
(+3 files in other folders)
